# mini-engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
assets/: config.json
assets/maps/: level01.csv  level02.csv  level03.csv  level04.csv  level05.csv  level06.csv  level07.csv  level08.csv  level09.csv  level10.csv
src/: main.cpp
src/core/: App.cpp  App.h
src/engine/: Assets.cpp  Assets.h  Camera2D.h  Config.cpp  Config.h  DebugState.h  DebugUI.cpp  DebugUI.h  Input.cpp  Input.h  Math.h  Paths.cpp  Paths.h  Time.h
src/game/: Entity.h  Game.cpp  Game.h  Pathfinding.cpp  Pathfinding.h  Tilemap.cpp  Tilemap.h
src/platform/: SdlPlatform.cpp  SdlPlatform.h  SdlTexture.cpp  SdlTexture.h
